--- a/src/LandingPage/Landing.css
+++ b/src/LandingPage/Landing.css
@@ -7,43 +7,77 @@
 body {
   height: 100vh;
   width: 90%;
+  font-size: 20px;
   margin-right: auto;
   margin-left: auto;
 }
 
-.landing-container {
-  height: 100vh;
-  width: 100%;
-}
+@media (min-width: 769px) {
+  .landing-container {
+    height: 100vh;
+    width: 100%;
+  }
 
-.landing-content {
-  margin: auto;
-  padding: 250px 0;
-  text-align: center;
-}
+  .landing-content {
+    margin: auto;
+    padding: 250px 0;
+    text-align: center;
+    width: 100%;
+  }
 
-.landing-header {
-  margin-top: 0px;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 100px;
-  flex-basis: 100%;
-}
+  .landing-header {
+    flex: 1;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 450%;
+    font-family: "Playfair Display", serif;
+    text-align: center;
+  }
 
-.landing-nav {
-  margin-right: auto;
-  margin-left: auto;
-  flex-direction: row;
-  flex-basis: 100%;
-}
+  .landing-nav {
+    margin-right: auto;
+    margin-left: auto;
+    flex-direction: row;
+    padding-right: 15%;
+    padding-left: 15%;
+  }
 
-ul {
-  display: flex;
-  list-style: none;
-}
+  ul {
+    display: flex;
+    list-style: none;
+  }
 
-.nav-item {
-  flex: 1;
-  align-items: center;
+  .nav-item {
+    flex: 1;
+    align-items: center;
+    font-family: "Playfair Display", serif;
+  }
+
+  a {
+    color: black;
+    font-weight: 400;
+    padding: 5px;
+  }
+  a:link {
+    text-decoration: none;
+  }
+
+  a:hover {
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+    border-left: solid;
+    border-right: solid;
+  }
+
+  .landing-line-break {
+    color: black;
+    font-weight: bold;
+    width: 10%;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
 }
