--- a/src/LandingPage/Landing.css
+++ b/src/LandingPage/Landing.css
@@ -34,6 +34,7 @@ body {
     font-size: 450%;
     font-family: "Playfair Display", serif;
     text-align: center;
+    text-shadow: 0px 2px 3px rgba(148, 150, 150, 0.51);
   }
 
   .landing-nav {
