--- a/src/LandingPage/Landing.css
+++ b/src/LandingPage/Landing.css
@@ -6,10 +6,11 @@
 
 body {
   height: 100vh;
-  width: 90%;
+  width: 100%;
   font-size: 20px;
   margin-right: auto;
   margin-left: auto;
+  background-color: white;
 }
 
 @media (min-width: 769px) {
@@ -19,22 +20,102 @@ body {
   }
 
   .landing-content {
+    display: flex;
+
+    width: 100%;
+  }
+  .landing-header-container {
+    flex: 1;
+    height: 100vh;
+    background-color: #132238;
+    padding-left: 10%;
+    padding-top: 10%;
+  }
+
+  .landing-header {
+    flex-direction: row;
+    text-align: left;
+    color: white;
+    font-size: 300%;
+    font-family: "Quando", serif;
+    line-height: 90%;
+  }
+
+  .landing-nav {
+    display: flex;
+    flex: 1;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: #132238;
+  }
+
+  .nav-list {
+    justify-content: center;
     margin: auto;
-    padding: 250px 0;
     text-align: center;
+    line-height: 100px;
+    letter-spacing: 1em;
+    font-size: 150%;
+  }
+
+  ul {
+    list-style: none;
+  }
+
+  .nav-item {
+    flex: 1;
+    align-items: center;
+    font-family: "Playfair Display", serif;
+    color: #ebf0f6;
+  }
+
+  a {
+    text-transform: lowercase;
+    font-family: "Playfair Display", serif;
+    color: #ebf0f6;
+    font-size: 120%;
+    font-weight: 400;
+    padding: 5px;
+  }
+  a:link {
+    text-decoration: none;
+  }
+
+  a:hover {
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+    border-bottom: 1px solid #ebf0f6;
+  }
+
+  .header-box {
+    height: 300px;
+    width: 100%;
+    border: 3px solid #98ccd3;
+    background-color: #98ccd3;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .landing-container {
+    height: 100vh;
+    width: 100%;
+  }
+
+  .landing-content {
+    padding: 250px 0;
+
     width: 100%;
   }
 
   .landing-header {
     flex: 1;
-    margin-top: 0px;
-    margin-bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 450%;
+    flex-direction: row;
+    text-align: left;
+    color: #132238;
+    font-size: 200%;
     font-family: "Playfair Display", serif;
-    text-align: center;
-    text-shadow: 0px 2px 3px rgba(148, 150, 150, 0.51);
+
+    text-shadow: 0px 2px 3px #ebf0f6;
   }
 
   .landing-nav {
@@ -57,9 +138,11 @@ body {
   }
 
   a {
-    color: black;
+    color: #132238;
+    font-size: 120%;
     font-weight: 400;
     padding: 5px;
+    text-shadow: 0px 2px 3px #ebf0f6;
   }
   a:link {
     text-decoration: none;
@@ -68,17 +151,87 @@ body {
   a:hover {
     font-family: "Playfair Display", serif;
     font-weight: bold;
-    border-left: solid;
-    border-right: solid;
+    border-left: solid #ebf0f6;
+    border-right: solid #ebf0f6;
   }
 
   .landing-line-break {
-    color: black;
     font-weight: bold;
     width: 10%;
-
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  .landing-container {
+    height: 100vh;
+    width: 100%;
+  }
+
+  .landing-content {
+    margin: auto;
+    padding: 250px 0;
+    text-align: center;
+    width: 100%;
+  }
+
+  .landing-header {
+    flex: 1;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #132238;
+    font-size: 300%;
+    font-family: "Playfair Display", serif;
+    text-align: center;
+    text-shadow: 0px 2px 3px #ebf0f6;
+  }
+
+  .landing-nav {
+    margin-right: auto;
+    margin-left: auto;
+    flex-direction: row;
+    padding-right: 15%;
+    padding-left: 15%;
+  }
+
+  ul {
+    display: flex;
+    list-style: none;
+  }
+
+  .nav-item {
+    flex: 1;
+    align-items: center;
+    font-family: "Playfair Display", serif;
+  }
+
+  a {
+    color: #132238;
+    font-size: 120%;
+    font-weight: 400;
+    padding: 5px;
+    text-shadow: 0px 2px 3px #ebf0f6;
+  }
+  a:link {
+    text-decoration: none;
+  }
+
+  a:hover {
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+    border-left: solid #ebf0f6;
+    border-right: solid #ebf0f6;
+  }
+
+  .landing-line-break {
+    font-weight: bold;
+    width: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
   }
 }
